crates/solidity/testing/snapshots/bindings_output/user_types/top_level/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[input.sol:2:28]
   │
 2 │ ╭─▶     function test() public pure returns (uint) {
   ┆ ┆   
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[input.sol:8:1]
   │
 8 │ type TopLevel is uint256;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["Test" @ input.sol:1:10] (contract)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["test" @ input.sol:2:14]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public pure returns (uint) {
   │              ──┬─  
   │                ╰─── ???
───╯
